# substitution

./: .gitignore  pyproject.toml  readme.md  setup.py
substitution/: __init__.py
substitution/base/: __init__.py  base_cycle.py  base_substitution.py
substitution/cycle/: cycle.py
substitution/src/: __init__.py  substitution.py
substitution/utils/: find_cycles.py  lcm.py
tests/: test_cycles.py  test_substitution.py
